--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack serve --open --watch",
+    "dev": "webpack serve --open --watch",
     "build": "webpack --config=webpack.config.js --mode=production",
     "build-gpix": "webpack --config=webpack.config.gpix.js",
     "build-gm": "webpack --config=webpack.config.gm.js",
